Add custom fraud detection favicon
- Created SVG favicon with shield and magnifying glass design
- Shield represents fraud protection
- Alert symbol shows detection capability
- Magnifying glass represents investigation/analysis
- Purple/blue color matches dashboard accent color

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fraud Detection Analytics</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script src="/js/chart.umd.js"></script>
     <script src="/js/hammer.min.js"></script>
     <script src="/js/chartjs-plugin-zoom.min.js"></script>
