--- a/public/analytics.html
+++ b/public/analytics.html
@@ -415,7 +415,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="chart-container">
-                        <canvas id="chart-risk"></canvas>
+                        <div id="chart-risk" style="width: 100%; height: 400px;"></div>
                     </div>
                 </div>
             </div>
@@ -1208,21 +1208,41 @@ LIMIT 100</textarea>
                 ORDER BY risk_bucket
             `);
 
-            createChart('risk', {
+            const chartDiv = document.getElementById('chart-risk');
+            if (!chartDiv) return;
+
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            const isDark = currentTheme === 'dark';
+
+            Plotly.newPlot(chartDiv, [{
                 type: 'bar',
-                data: {
-                    labels: data.data.map(r => r.risk_bucket),
-                    datasets: [{
-                        label: 'Count',
-                        data: data.data.map(r => parseInt(r.count, 10) || 0),
-                        backgroundColor: '#667eea',
-                    }],
+                x: data.data.map(r => r.risk_bucket),
+                y: data.data.map(r => parseInt(r.count, 10) || 0),
+                marker: { color: '#667eea' },
+                hovertemplate: '<b>%{x}</b><br>Count: %{y}<extra></extra>'
+            }], {
+                paper_bgcolor: 'rgba(0,0,0,0)',
+                plot_bgcolor: 'rgba(0,0,0,0)',
+                font: {
+                    family: 'system-ui, -apple-system, sans-serif',
+                    color: isDark ? '#e0e0e0' : '#1a1a1a'
                 },
-                options: {
-                    plugins: {
-                        legend: { display: false },
-                    },
+                margin: { t: 20, b: 60, l: 60, r: 20 },
+                xaxis: {
+                    title: '',
+                    gridcolor: isDark ? '#333' : '#eee'
                 },
+                yaxis: {
+                    title: 'Count',
+                    gridcolor: isDark ? '#333' : '#eee',
+                    zeroline: false
+                },
+                showlegend: false
+            }, {
+                responsive: true,
+                displayModeBar: true,
+                modeBarButtonsToRemove: ['lasso2d', 'select2d'],
+                displaylogo: false
             });
         }
 
